initial attempt to get this working with JDK10